samples/_failures_safe/1761342320_98fe58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2417d280.c: In function ‘main’:
./samples/SAFE/__tmp_2417d280.c:155:27: error: expected ‘;’ at end of input
  155 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_2417d280.c:155:21: error: expected declaration or statement at end of input
  155 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_2417d280.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2417d280.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2417d280.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2417d280.c:155:21: error: expected declaration or statement at end of input
